--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -46,7 +46,7 @@ button.confirm:hover {
 
 .highscores {
     width: 100%;
-    margin: 25px auto;
+    margin: 25px0 auto;
 }
 table {
     width: 50%;
